# claude-code-transcripts

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/claude_code_publish/: __init__.py
src/claude_code_publish/templates/: index.html  macros.html
src/claude_code_transcripts/: __init__.py
tests/: conftest.py  test_generate_html.py
tests/__snapshots__/test_generate_html/: TestGenerateHtml.test_generates_index_html.html  TestGenerateHtml.test_generates_page_001_html.html  TestGenerateHtml.test_generates_page_002_html.html  TestParseSessionFile.test_jsonl_generates_html.html  TestRenderContentBlock.test_text_block.html  TestRenderContentBlock.test_thinking_block.html  TestRenderFunctions.test_render_bash_tool.html  TestRenderFunctions.test_render_todo_write.html  TestRenderFunctions.test_render_write_tool.html
