[project]
name = "claude-code-publish"
version = "0.1"
description = "Add your description here"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Simon Willison" }
]
requires-python = ">=3.10"
dependencies = ["markdown"]

[project.scripts]
claude-code-publish = "claude_code_publish:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "syrupy>=5.0.0",
]
